Bug 166340. Typeaheadfind prefer visible not working right. r=kyle, sr=alecf